# rp2040-freertos-template

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CMakeLists.txt  LICENSE  README.md  renovate.json
.github/: labels.yml  release-drafter.yml
.github/workflows/: build.yaml  labels.yaml  lint.yaml  release-drafter.yaml
inc/: CMakeLists.txt  FreeRTOSConfig.h
src/: CMakeLists.txt  main.c
